--- a/frontend/Rank-Up/package.json
+++ b/frontend/Rank-Up/package.json
@@ -26,6 +26,8 @@
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^7.0.0",
+    "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.1.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -45,6 +47,8 @@
     "@capacitor/cli": "^4.8.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@ionic/lab": "3.2.15",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
