--- a/frontend/Rank-Up/package.json
+++ b/frontend/Rank-Up/package.json
@@ -21,9 +21,10 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.7.3",
+    "@capacitor/core": "^5.0.0",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
+    "@capacitor/push-notifications": "^5.0.2",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^7.0.0",
     "bcryptjs": "^2.4.3",
