--- a/frontend/Rank-Up/package.json
+++ b/frontend/Rank-Up/package.json
@@ -25,6 +25,7 @@
     "@capacitor/core": "4.7.3",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
+    "@capacitor/local-notifications": "^5.0.2",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^7.0.0",
     "bcryptjs": "^2.4.3",
