--- a/frontend/Rank-Up/package.json
+++ b/frontend/Rank-Up/package.json
@@ -20,13 +20,13 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@capacitor/android": "4.8.0",
-    "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.7.3",
-    "@capacitor/haptics": "4.1.0",
-    "@capacitor/keyboard": "4.1.1",
+    "@capacitor/android": "5.0.4",
+    "@capacitor/app": "^5.0.2",
+    "@capacitor/core": "^5.0.4",
+    "@capacitor/haptics": "^5.0.2",
+    "@capacitor/keyboard": "^5.0.2",
     "@capacitor/local-notifications": "^5.0.2",
-    "@capacitor/status-bar": "4.1.1",
+    "@capacitor/status-bar": "^5.0.2",
     "@ionic/angular": "^7.0.0",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.1.1",
